--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,11 @@
       "LogLevel": {
         "Default": "Warning"
       }
+    },
+    "CloudinarySettings": {
+        "CloudName": "dlbr1glce",
+        "ApiKey": "521146176573148",
+        "ApiSecret": "v_9kjZjSVNHM4-UrT6JCn3bsOIQ"
     }
   }
 }
