--- a/DatingApp.API.csproj
+++ b/DatingApp.API.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>
+  <PropertyGroup>
     <UserSecretsId>fa9fe78f-f827-4fe0-81f1-17b57e723893</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
     <PackageReference Include="NewtonSoft.Json" Version="11.0.2"/>
