--- a/DatingApp.API.csproj
+++ b/DatingApp.API.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
     <PackageReference Include="NewtonSoft.Json" Version="11.0.2"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3"/>
