--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatingApp.db"
+    "DefaultConnection": "Server=localhost: Database=datingapp; Uid=appuser; Password=password"
   },
   "Logging": {
     "IncludeScopes": false,
