--- a/DatingApp.API.csproj
+++ b/DatingApp.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
     <PackageReference Include="NewtonSoft.Json" Version="11.0.2"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.0"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3"/>
