Use postgresql connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=datingapp; Uid=appuser; Password=password"
+    "DefaultConnection": "Server=localhost; Database=datingapp; Username=appuser"
   },
   "Logging": {
     "IncludeScopes": false,
