--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: csharp
 mono: none
 dotnet: 2.1.300
+env:
+  - DefaultConnection="Server=localhost; Database=datingapp; Username=postgres"
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database datingapp;' -U postgres
 script:
   - dotnet build
 notifications:
