--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ mono: none
 dotnet: 2.1.300
 env:
   - DefaultConnection="Server=localhost; Database=datingapp; Username=postgres"
+addons:
+  postgresql: "10.4"
 services:
   - postgresql
 before_script:
