ci: Set PGPORT to 5433

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: csharp
 mono: none
 dotnet: 2.1.300
 env:
-  - DefaultConnection="Server=localhost; Database=datingapp; Username=postgres"
+  global:
+    - PGPORT=5433
+  matrix:
+    - DefaultConnection="Server=localhost; Database=datingapp; Username=postgres"
 addons:
   postgresql: "10"
   apt:
