--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ addons:
 services:
   - postgresql
 before_script:
+  # sleep a bit to allow the postgres service to wake up
+  - sleep 3
   - psql -c 'create database datingapp;' -U postgres
   - psql -l -U postgres
 script:
