--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ services:
 before_script:
   # sleep a bit to allow the postgres service to wake up
   - sleep 3
-  - psql -c 'create database datingapp;' -U postgres
+  - psql -h 127.0.0.1 -c 'create database datingapp;' -U postgres
   - psql -l -U postgres
 script:
   - dotnet build
