--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: csharp
 mono: none
 dotnet: 2.1.300
 env:
+  global:
+    - PGPORT=5433
   matrix:
     - DefaultConnection="Server=localhost; Database=datingapp; Username=postgres"
 addons:
