ci: Try adding a postgres service in gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,13 @@
 image: microsoft/dotnet:latest
 
+services:
+  - postgres:latest
+
+variables:
+  POSTGRES_DB: datingapp
+  POSTGRES_USER: appuser
+  POSTGRES_PASSWORD: ""
+
 stages:
   - build
 
