--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   POSTGRES_DB: datingapp
   POSTGRES_USER: appuser
   POSTGRES_PASSWORD: ""
+  ASPNETCORE_ENVIRONMENT: Production
 
 stages:
   - build
