--- a/DatingApp.API.csproj
+++ b/DatingApp.API.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.0"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
-    <PackageReference Include="NewtonSoft.Json" Version="11.0.2"/>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1"/>
   </ItemGroup>
   <ItemGroup>
